--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li><a href="#schedule">My Schedule</a></li>
           <li><a href="#workout">My Workout</a></li>
           <li><a href="#hobbies">My Hobbies</a></li>
+          <li><a href="game">Game: Escape the PDF</a></li>
         </ul>
       </nav>
     </div>
@@ -79,7 +80,9 @@
         <li>Play Badminton</li>
       </ul>
     </section>
-<a href="https://baoanhvsquys.vercel.app/" type="_blank">my little game</a>
+    <section id="game">
+<a href="https://baoanhvsquys.vercel.app/" type="_blank"><img src="escapethepdf.png" alt="escapethepdf"></a>
+</section>
     <button>
       <a href="#"
         ><img src="arrowup.png" alt="Up arrow" height="50" width="50"
