--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#schedule">My Schedule</a></li>
           <li><a href="#workout">My Workout</a></li>
           <li><a href="#hobbies">My Hobbies</a></li>
-          <li><a href="game">Game: Escape the PDF</a></li>
+          <li><a href="#game">Game: Escape the PDF</a></li>
         </ul>
       </nav>
     </div>
