--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#schedule">My Schedule</a></li>
           <li><a href="#workout">My Workout</a></li>
           <li><a href="#hobbies">My Hobbies</a></li>
-          <li><a href="#game">Game: Escape the PDF</a></li>
+          <li><a href="#game">My Games</a></li>
         </ul>
       </nav>
     </div>
@@ -75,18 +75,38 @@
       <h1>🎨 My hobbies:</h1>
 
       <ul>
+
         <li>Draw.</li>
         <li>Watch documentary movies, anime, Netflix.</li>
         <li>Play Badminton</li>
+
       </ul>
     </section>
     <section id="game">
-<a href="https://baoanhvsquys.vercel.app/" type="_blank"><img src="escapethepdf.png" alt="escapethepdf"></a>
-</section>
+
+      <h1>🎮 My games:</h1>
+
+      <ol>
+
+        <li>Escape the PDF</li>
+
+        <a href="https://baoanhvsquys.vercel.app/" target="_blank"
+          ><img src="escapethepdf.png" alt="escapethepdf" height="400"
+        /></a>
+        <p><a href="escapethepdf.png" download>Download image</a></p>
+
+        <li>Escape the Maze</li>
+        <a href="game2.html" target="_blank"><img src="mazeguy2edit.png" alt="mazeguy"height=400></a>
+      </ol>
+
+    </section>
+    <a href="mailto:trongquy131204@gmail.com">my email</a>
     <button>
-      <a href="#"
-        ><img src="arrowup.png" alt="Up arrow" height="50" width="50"
-      /></a>
+
+      <a href="#"><img src="arrowup.png" alt="Up arrow" height="50" width="50"/></a>
+
     </button>
+
   </body>
+
 </html>
