--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="icon" type="image/x-icon" href="hi.png" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <title>About me</title>
-    <img src="hi.png" alt="" />
+    <img src="hi.png" alt="hi" />
+    <a href="mannhi.jpg" target="_blank"><img src="factveloaiong.png" alt="troll" height="125"></a>
+    <---click hear to find out
+
   </head>
 
   <body>
@@ -100,7 +103,7 @@
       </ol>
 
     </section>
-    <a href="mailto:trongquy131204@gmail.com">my email</a>
+    <a href="mailto:trongquy131204@gmail.com">my email</a><br>
     <button>
 
       <a href="#"><img src="arrowup.png" alt="Up arrow" height="50" width="50"/></a>
